trunk/NewArchive/c168ff489306be0728d1faff40bc3c59-ae2bbb7fecc80e735bf4e36e297600d9/output
+ g++-4.8 -std=c++11 main.cpp
main.cpp:4:35: error: expected ‘,’ or ‘...’ before ‘const’
 void derp(std::string const & abc const) {}
                                   ^
+ ./a.out
/tmp/1374742177-1262162075/cmd.sh: line 8: ./a.out: No such file or directory
